--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
-#map { 
-    height: 100vh; 
+body {
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+img {
+    width: 50%;
+}
+
+#map {
+    height: 100%;
 }
