--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,20 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.background {
-    height: 200px;
-    width: 200px;
-    background-size: cover;
-}
-
 .container {
     height: 90vh;
 }
 
 #map {
     height: 100%;
+}
+
+footer {
+    height: 10vh;
+}
+
+.background {
+    height: 200px;
+    width: 200px;
+    background-size: cover;
 }
